# limit-order-book-simulator

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  simulator
.github/workflows/: ci.yml
data/: latency.csv  sample_orders.txt
data/snapshots/: snapshot_000000005.txt  snapshot_000000010.txt  snapshot_000000015.txt
include/: order.h  orderbook.h
scripts/: convert_lobster_to_engine.py  gen_synth.py  latency_hist.py  plot_price.py  plot_spread_hist.py
src/: main.cpp  orderbook.cpp
